packages/gaist/examples/invalid/invalid-character.gaist
// Invalid character in code
state {
  count = 0;
  name = "test"@;
} 